# LRP-TSP

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  extract_coords.py  pyproject.toml  requirements.txt  setup.bat  start.bat  tsp_demo.yaml  tsp_solver.py
.github/workflows/: build.yml  cleanup-last-release-label.yml  cleanup-releases.yml
data/: world_data.json
