[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsp-dune"
version = "0.1.0"
description = "Route and TSP planner for Dune: Awakening (Landsraad houses)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "", email = "" }]
keywords = ["dune", "tsp", "routing", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

dependencies = [
  "rich>=13.0.0",
  "questionary>=2.0.0",
]

[project.optional-dependencies]
ortools = ["ortools>=9.9.0"]

[project.scripts]
tsp-dune = "tsp_solver:main"

[tool.setuptools]
# Single-module project (tsp_solver.py in repository root)
py-modules = ["tsp_solver", "extract_coords"]
